--- a/task-app/app/views/todos/_form.html.erb
+++ b/task-app/app/views/todos/_form.html.erb
@@ -10,22 +10,22 @@
     </div>
   <% end %>
   <div>
-    <%= form.label :task, style: "display: block" %>
-    <%= form.text_field :task %>
+    <%= form.label :task, style: "display: block", class:"form-label" %>
+    <%= form.text_field :task, class:"form-control" %>
   </div>
   <div>
-    <%= form.label :due, style: "display: block" %>
-    <%= form.date_field :due %>
+    <%= form.label :due, style: "display: block", class:"form-label mt-3" %>
+    <%= form.date_field :due, class:"form-control" %>
   </div>
   <div>
-    <%= form.label :priority, style: "display: block" %>
-    <%= form.select :priority, [["High", "High"], ["Medium", "Medium"], ["Low", "Low"]]%>
+    <%= form.label :priority, style: "display: block", class:"form-label mt-3" %>
+    <%= form.select :priority, [["High", "High"], ["Medium", "Medium"], ["Low", "Low"]], class:"form-control" %>
   </div>
   <div>
-    <%= form.label :completed, style: "display: block" %>
-    <%= form.check_box :completed %>
+    <%= form.label :completed, style: "display: block", class:"form-label mt-3" %>
+    <%= form.check_box :completed, class:"form-check-input" %>
   </div>
-  <div>
+  <div class="mt-3">
     <%= form.submit %>
   </div>
 <% end %>
