--- a/task-app/app/views/todos/_todo.html.erb
+++ b/task-app/app/views/todos/_todo.html.erb
@@ -1,22 +1,6 @@
 <div id="<%= dom_id todo %>">
-  <p>
-    <strong>Task:</strong>
-    <%= todo.task %>
-  </p>
-
-  <p>
-    <strong>Due:</strong>
-    <%= todo.due %>
-  </p>
-
-  <p>
-    <strong>Priority:</strong>
-    <%= todo.priority %>
-  </p>
-
-  <p>
-    <strong>Completed:</strong>
-    <%= todo.completed %>
-  </p>
-
+  <td><%=todo.task%></td>
+  <td><%=todo.due%></td>
+  <td><%=todo.priority%></td>
+  <td><%=todo.completed%></td>
 </div>
