--- a/task-app/app/views/todos/index.html.erb
+++ b/task-app/app/views/todos/index.html.erb
@@ -1,14 +1,25 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Todos</h1>
-
+<h1 class="mt-3">Todos</h1>
 <div id="todos">
-  <% @todos.each do |todo| %>
-    <%= render todo %>
-    <p>
-      <%= link_to "Show this todo", todo %>
-    </p>
-  <% end %>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Task</th>
+        <th scope="col">Due Date</th>
+        <th scope="col">Priority</th>
+        <th scope="col">Completed</th>
+        <th scope="col">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @todos.each do |todo| %>
+        <tr>
+          <%= render todo %>
+          <td>
+            <%= link_to "Show this todo", todo, class:"btn btn-secondary" %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
-
-<%= link_to "New todo", new_todo_path %>
+<%= link_to "New todo", new_todo_path, class:"btn btn-primary" %>
