--- a/task-app/app/views/todos/new.html.erb
+++ b/task-app/app/views/todos/new.html.erb
@@ -1,9 +1,8 @@
-<h1>New todo</h1>
-
-<%= render "form", todo: @todo %>
-
-<br>
-
-<div>
-  <%= link_to "Back to todos", todos_path %>
+<div class="container w-50">
+  <h1>Add Todo</h1>
+  <%= render "form", todo: @todo %>
+  <br>
+  <div>
+    <%= link_to "Back to todos", todos_path %>
+  </div>
 </div>
