--- a/task-app/app/views/home/_header.html.erb
+++ b/task-app/app/views/home/_header.html.erb
@@ -14,6 +14,9 @@
             <%= link_to "Add Task", new_todo_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
+            <%= link_to "Edit Profile", edit_user_registration_path, method: :delete, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
             <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"nav-link" %>
           </li>
         <% else %>
