--- a/task-app/app/views/todos/_form.html.erb
+++ b/task-app/app/views/todos/_form.html.erb
@@ -26,6 +26,6 @@
     <%= form.check_box :completed, class:"form-check-input" %>
   </div>
   <div class="mt-3">
-    <%= form.submit %>
+    <%= form.submit class:"btn btn-secondary" %>
   </div>
 <% end %>
