--- a/task-app/app/views/todos/_form.html.erb
+++ b/task-app/app/views/todos/_form.html.erb
@@ -25,6 +25,9 @@
     <%= form.label :completed, style: "display: block", class:"form-label mt-3" %>
     <%= form.check_box :completed, class:"form-check-input" %>
   </div>
+  <div>
+    <%= form.number_field :user_id, class:"form-control", value:current_user.id, id: :todo_user_id, type: :hidden %>
+  </div>
   <div class="mt-3">
     <%= form.submit class:"btn btn-secondary" %>
   </div>
