--- a/task-app/app/views/todos/index.html.erb
+++ b/task-app/app/views/todos/index.html.erb
@@ -1,31 +1,40 @@
-<h1 class="mt-3">Todos</h1>
-<div id="todos">
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Task</th>
-        <th scope="col">Due Date</th>
-        <th scope="col">Priority</th>
-        <th scope="col">Completed</th>
-        <th scope="col">User Id</th>
-        <th scope="col">Action</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @todos.each do |todo| %>
-        <% if todo.user == current_user%>
-          <tr>
-            <%= render todo %>
-            <td>
-              <%= todo.user_id%>
-            </td>
-            <td>
-              <%= link_to "Show this todo", todo, class:"btn btn-secondary" %>
-            </td>
-          </tr>
-        <% end%>
+<% if user_signed_in? %>
+  <h1 class="mt-3">Todos</h1>
+  <div id="todos">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Task</th>
+          <th scope="col">Due Date</th>
+          <th scope="col">Priority</th>
+          <th scope="col">Completed</th>
+          <th scope="col">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @todos.each do |todo| %>
+          <% if todo.user == current_user%>
+            <tr>
+              <%= render todo %>
+              <td>
+                <%= link_to "Show this todo", todo, class:"btn btn-secondary" %>
+              </td>
+            </tr>
+          <% end%>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <%= link_to "New todo", new_todo_path, class:"btn btn-primary" %>
+<% else %>
+  <div class="p-5 mb-4 bg-light rounded-3 mt-3">
+    <div class="container-fluid py-5">
+      <h1>Welcome to Task App</h1>
+      <% if user_signed_in? %>
+        <%= link_to "See Todos", todos_path, class:"btn btn-primary" %>
+      <% else%>
+        <h5>Please login to view task</h5>
       <% end %>
-    </tbody>
-  </table>
-</div>
-<%= link_to "New todo", new_todo_path, class:"btn btn-primary" %>
+    </div>
+  </div>
+<% end %>
