--- a/task-app/app/views/todos/show.html.erb
+++ b/task-app/app/views/todos/show.html.erb
@@ -3,7 +3,7 @@
     <h1 class="display-5 fw-bold"><%= @todo.task %></h1>
     <h3>Due Date: <%= @todo.due %></h3>
     <h4>Priority: <%= @todo.priority %></h4>
-    <h4>Status: <%= @todo.completed %></h4>
+    <h4>Completed: <%= @todo.completed %></h4>
     <%= link_to "Edit this todo", edit_todo_path(@todo), class:"btn btn-primary me-1" %>
     <%= link_to "Back to todos", todos_path, class:"btn btn-primary" %>
     <%= button_to "Destroy this todo", @todo, method: :delete, class:"btn btn-danger mt-2" %>
