--- a/task-app/app/views/todos/_form.html.erb
+++ b/task-app/app/views/todos/_form.html.erb
@@ -19,7 +19,7 @@
   </div>
   <div>
     <%= form.label :priority, style: "display: block", class:"form-label mt-3" %>
-    <%= form.select :priority, [["High", "High"], ["Medium", "Medium"], ["Low", "Low"]], class:"form-control" %>
+    <%= form.select :priority, [["High", 1], ["Medium", 2], ["Low", 3]], class:"form-control" %>
   </div>
   <div>
     <%= form.label :completed, style: "display: block", class:"form-label mt-3" %>
